# Spreadsheet

./: .gitignore  LICENSE.md  README.md  com.github.elework.spreadsheet.yml  io.github.elework.spreadsheet.yml  meson.build
.github/workflows/: ci.yml  gettext.yml  main.yml
data/: Application.css  com.github.ryonakano.spreadsheet.appdata.xml  com.github.ryonakano.spreadsheet.desktop.in  com.github.ryonakano.spreadsheet.gschema.xml  gresources.xml  meson.build  spreadsheet.appdata.xml.in  spreadsheet.desktop.in  spreadsheet.gresource.xml  spreadsheet.gschema.xml  spreadsheet.metainfo.xml.in  xyz.gelez.spreadsheet.gschema.xml
debian/: changelog  control  copyright
meson/: post_install.py
po/: POTFILES  README.md  com.github.ryonakano.spreadsheet.pot  fr.po  io.github.elework.spreadsheet.pot  meson.build  nl.po
po/extra/: POTFILES  extra.pot  fr.po  meson.build  nl.po
src/: AlphabetGenerator.vala  App.vala  Config.vala.in  Util.vala  functions.vala  main.vala  meson.build
src/Functions/: Basic.vala  Geometry.vala  meson.build
src/Models/: Cell.vala  CellStyle.vala  FontStyle.vala  Function.vala  FunctionManager.vala  HistoryAction.vala  Page.vala  RecentItem.vala  Spreadsheet.vala  StringObject.vala  meson.build
src/Parser/: Evaluator.vala  Grammar.vala  Lexer.vala  Parser.vala  Token.vala
src/Parser/AST/: CallExpression.vala  CellReference.vala  Expression.vala  NumberExpression.vala
src/Services/: FuncSearchList.vala  FunctionManager.vala  HistoryManager.vala  RecentsManager.vala  ZoomManager.vala  meson.build
src/Services/CSV/: CSVGrammar.vala  CSVParser.vala  CSVWriter.vala  meson.build
src/Services/Formula/: FormulaGrammar.vala  FormulaParser.vala  meson.build
src/Services/Formula/AST/: CallExpression.vala  CellReference.vala  Expression.vala  NumberExpression.vala  TextExpression.vala
src/Services/Parsing/: Evaluator.vala  Grammar.vala  Lexer.vala  Parser.vala  Token.vala  meson.build
src/UI/: MainWindow.vala  TitleBar.vala  WelcomeView.vala  meson.build
src/Widgets/: ActionBar.vala  FunctionListRow.vala  FunctionPresenter.vala  IconLabelRow.vala  RecentListRow.vala  RoundedSquare.vala  Sheet.vala  StyleModal.vala  TitleBar.vala  meson.build
src/functions/: Basic.vala
src/models/: cell.vala  function.vala  page.vala  spreadsheet.vala
src/parser/: Grammar.vala  Lexer.vala  Parser.vala  Token.vala  evaluator.vala  grammar.vala  parser.vala
src/parser/ast/: Expression.vala  block.vala  call-expression.vala  call.vala  code-node.vala  number-expression.vala
src/ui/: MainWindow.vala  main-window.vala
src/widgets/: Sheet.vala  sheet.vala
