sources = files('App.vala',
  'AlphabetGenerator.vala',

  'Functions/Basic.vala',
  'Functions/Geometry.vala',

  'UI/MainWindow.vala',
  'Widgets/Sheet.vala',
  'Widgets/FunctionPresenter.vala',

  'Services/HistoryManager.vala',

  'Models/Cell.vala',
  'Models/Function.vala',
  'Models/Page.vala',
  'Models/HistoryAction.vala',
  'Models/Spreadsheet.vala',

  'Parser/Evaluator.vala',
  'Parser/Grammar.vala',
  'Parser/Lexer.vala',
  'Parser/Parser.vala',
  'Parser/Token.vala',

  'Parser/AST/CallExpression.vala',
  'Parser/AST/Expression.vala',
  'Parser/AST/NumberExpression.vala'
)
